build-failure.log
To honour the JVM settings for this build a single-use Daemon process will be forked. For more on this, please refer to https://docs.gradle.org/8.14/userguide/gradle_daemon.html#sec:disabling_the_daemon in the Gradle documentation.
Daemon will be stopped at the end of the build 

> Configure project :
-------------------------------------
NeoGradle detected a problem with your project: Run.getProgramArguments()
Details: The method getProgramArguments() is deprecated and will be removed in the future
Potential Solution: Use getArguments() instead of getProgramArguments()
More information: https://github.com/neoforged/NeoGradle/blob/NG_7.1/README.md#common-runs-configuration-types-configure-by-type
-------------------------------------
-------------------------------------
NeoGradle detected a problem with your project: Run.getProgramArguments()
Details: The method getProgramArguments() is deprecated and will be removed in the future
Potential Solution: Use getArguments() instead of getProgramArguments()
More information: https://github.com/neoforged/NeoGradle/blob/NG_7.1/README.md#common-runs-configuration-types-configure-by-type
-------------------------------------

> Task :neoFormListLibraries UP-TO-DATE
> Task :cacheVersionManifest1.21.1 UP-TO-DATE
> Task :cacheVersionExecutableClient1.21.1 UP-TO-DATE
> Task :cacheVersionExecutableServer1.21.1 UP-TO-DATE
> Task :cacheVersionExtractedServer1.21.1 UP-TO-DATE
> Task :cacheVersionMappingsClient1.21.1 UP-TO-DATE
> Task :create1.21.1ClientExtraJar UP-TO-DATE
> Task :selectRawArtifactNg_dummy_ng.net.minecraft_client_1.21.1_client-extra UP-TO-DATE
> Task :neoFormListTransformLibraries UP-TO-DATE
> Task :neoFormStripClient UP-TO-DATE
> Task :neoFormStripServer UP-TO-DATE
> Task :neoFormMerge UP-TO-DATE
> Task :neoFormMergeMappings UP-TO-DATE
> Task :neoFormRename UP-TO-DATE
> Task :neoFormDecompile UP-TO-DATE
> Task :neoFormInject UP-TO-DATE
> Task :neoFormPatch UP-TO-DATE
> Task :neoFormPatchUserDev UP-TO-DATE
> Task :neoFormTransformSource UP-TO-DATE
> Task :neoFormRecompile UP-TO-DATE
> Task :supplyRawJarForneoFormJoined1.21.1-20240808.144430 UP-TO-DATE
> Task :selectRawArtifactNg_dummy_ng.net.neoforged_neoforge_21.1.172 UP-TO-DATE

> Task :compileJava FAILED
/home/kaiki/Projects/Mine-ChatCorrect/src/main/java/com/kaiki/minechatcorrect/client/ClientKeyMappings.java:10: error: cannot find symbol
import net.neoforged.neoforge.event.tick.ClientTickEvent;
                                        ^
  symbol:   class ClientTickEvent
  location: package net.neoforged.neoforge.event.tick
/home/kaiki/Projects/Mine-ChatCorrect/src/main/java/com/kaiki/minechatcorrect/client/ClientKeyMappings.java:33: error: package ClientTickEvent does not exist
    private static void onClientTick(ClientTickEvent.Post event) {
                                                    ^
2 errors

[Incubating] Problems report is available at: file:///home/kaiki/Projects/Mine-ChatCorrect/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  /home/kaiki/Projects/Mine-ChatCorrect/src/main/java/com/kaiki/minechatcorrect/client/ClientKeyMappings.java:10: error: cannot find symbol
  import net.neoforged.neoforge.event.tick.ClientTickEvent;
                                          ^
    symbol:   class ClientTickEvent
    location: package net.neoforged.neoforge.event.tick
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 7s
23 actionable tasks: 1 executed, 22 up-to-date
